welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value estDans
  if ((estDans(a,10,30))&&(estDans(b,10,20))){
       ^max1020:2: error: not found: value estDans
  if ((estDans(a,10,30))&&(estDans(b,10,20))){
                           ^max1020:4: error: not found: value estDans
  if ((estDans(a,10,30))&&(!estDans(b,10,20))){
       ^max1020:4: error: not found: value estDans
  if ((estDans(a,10,30))&&(!estDans(b,10,20))){
                            ^max1020:6: error: not found: value estDans
  if ((!estDans(a,10,30))&&(estDans(b,10,20))){
        ^max1020:6: error: not found: value estDans
  if ((!estDans(a,10,30))&&(estDans(b,10,20))){
                            ^