welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if ((estDans(a,10,30))&&(estDans(b,10,20))){
    return Math.max(a,b)}
  if ((estDans(a,10,30))&&(!estDans(b,10,20))){
    return a}
  if ((!estDans(a,10,30))&&(estDans(b,10,20))){
    return b}
  return 0
}